--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap" rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
     
@@ -65,7 +68,9 @@
         <div id="skillss" class="relative w-3/4 ">
             <div class="shadow-[0px_0px_62px_22px_rgba(251,239,241,0.8)] h-[0.01px] w-[276px] right-[140px] top-[300px] -translate-x-[100%] -translate-y-[100%] absolute"></div>
             <img     class=" "  src="Web development (1) (1).png" alt="">
+            <div class="font-['Playwrite-GB-S'] text-3xl font-semibold text-center">&lt; <span class="text-orange-600">b</span>e Unique <span class="text-orange-600">b</span>e Different / &gt;</div>
         </div>
+
         <div class="bg-orange-600 text-white w-1/4 h-5/6 rounded-lg shadow-[0px_0px_28px_9px_rgba(234,88,12,0.2)] py-4">
             <h1 class="text-center mt-5 text-3xl font-semibold">My Skills <i class="ri-terminal-box-line"></i></h1>
             <hr class="w-5/6 mx-auto mt-2 text-zinc-900">
