--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="flex gap-6 drop-shadow-lg font-semibold">
                <a class="hover:text-orange-500" href="#page2">Skills</a>
                <a class="hover:text-orange-500" href="#page4">Profiles</a>
-               <a class="hover:text-orange-500" href="">Got a Question?</a>
+               <a class="hover:text-orange-500" href="#emailid">Got a Question?</a>
             </div>
          </nav>
          <div class="flex w-5/6 mx-auto h-96 mt-16" id="section1">
