removes gsap from mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <script src="https://cdn.tailwindcss.com"></script>
       <link rel="stylesheet" href="style.css" />
    </head>
-   <body class="bg-[#0C0C0C] text-[#E9E9E9] overflow-x-hidden">
+   <body class="bg-[#0C0C0C] text-[#E9E9E9] sm:overflow-x-hidden">
       <div
          id="cursor"
          class="hidden md:inline-block h-[20px] w-[20px] bg-orange-500 fixed rounded-full z-[99] text-[5px] font-semibold text-center"
