--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                   together in every build!
                </div>
             </div>
-            <div class="w-full md:w-1/2 h-full rounded-lg bg-zinc-00 relative">
+            <div class="w-full hidden md:inline-block md:w-1/2 h-full rounded-lg bg-zinc-00 relative">
                <img class="hidden md:inline-block" id="svg1" src="svg1.svg" alt="" />
                <div
                   id="pfp"
-                  class="absolute top-12 left-24 h-96 rounded-lg mx-auto bg-[#FB8500] p-4 shadow-[0px_0px_30px_9px_rgba(234,88,12,0.4)]"
+                  class="absolute top-24  md:top-12 md:left-24 h-96 rounded-lg mx-auto bg-[#FB8500] p-4 shadow-[0px_0px_30px_9px_rgba(234,88,12,0.4)]"
                   >
                   <div
                      class="overlay hidden md:inline-block bg-transparent h-full w-full absolute z-[999]"
@@ -106,7 +106,7 @@
             </div>
          </div>
       </div>
-      <div id="page2" class="h-auto md:h-screen w-full px-4">
+      <div id="page2" class="h-auto md:mt-0 md:h-screen w-full px-4">
          <div
             class="mt-12 flex items-center justify-center  h-3/4 md:h-[90%] md:pr-10 w-full relative"
             >
@@ -326,12 +326,12 @@
         </div>
         <div class="md:ml-60 mt-20 h-[1px] w-5/6 bg-zinc-200"></div>
       </div>
-      <div id="page4" class="h-screen w-full py-1">
+      <div id="page4" class="h-auto md:h-screen w-full py-1">
         <h1 class="font-normal font-['Mulish'] mt-10 ml-10 font-semibold text-7xl">
           Profiles
         </h1>
-        <div id="profilesec" class="h-[70%] w-full mt-10 flex gap-10 items-center justify-center">
-         <div class="w-1/5 h-full bg-[#FB8500] py-3 shadow-[0px_0px_30px_9px_rgba(234,88,12,0.4)] hover:shadow-[0px_0px_40px_12px_rgba(234,88,12,0.6)] transition-shadow duration-300 ease-in-out rounded-lg">
+        <div id="profilesec" class="h-[70%] w-full mt-10 flex flex-col md:flex-row gap-10 items-center justify-center">
+         <div class="w-[93%] md:w-1/5 h-full bg-[#FB8500] py-3 shadow-[0px_0px_30px_9px_rgba(234,88,12,0.4)] hover:shadow-[0px_0px_40px_12px_rgba(234,88,12,0.6)] transition-shadow duration-300 ease-in-out rounded-lg">
             <img class="w-[95%] mx-auto rounded-lg mt-5 transform transition-transform duration-300 ease-in-out hover:scale-105" src="github.png" alt="">
             <div class="h-[1px] bg-gray-100 mt-4"></div>
             <div class="italic mx-auto text-center text-[#023047] mt-4 font-semibold text-lg">garvittsingla</div>
@@ -348,7 +348,7 @@
                 </div>
             </div>
         </div>
-        <div class="w-1/5 h-full bg-[#FB8500] py-3 shadow-[0px_0px_30px_9px_rgba(234,88,12,0.4)] hover:shadow-[0px_0px_40px_12px_rgba(234,88,12,0.6)] transition-shadow duration-300 ease-in-out rounded-lg">
+        <div class="w-[93%] md:w-1/5 h-full bg-[#FB8500] py-3 shadow-[0px_0px_30px_9px_rgba(234,88,12,0.4)] hover:shadow-[0px_0px_40px_12px_rgba(234,88,12,0.6)] transition-shadow duration-300 ease-in-out rounded-lg">
          <img class="w-[95%] mx-auto rounded-lg mt-5 transform transition-transform duration-300 ease-in-out hover:scale-105" src="x.png" alt="">
          <div class="h-[1px] bg-gray-100 mt-4"></div>
          <div class="italic mx-auto text-center text-[#023047] mt-4 font-semibold text-lg">garvits093</div>
@@ -365,7 +365,7 @@
              </div>
          </div>
      </div>
-     <div class="w-1/5 h-full bg-[#FB8500] py-3 shadow-[0px_0px_30px_9px_rgba(234,88,12,0.4)] hover:shadow-[0px_0px_40px_12px_rgba(234,88,12,0.6)] transition-shadow duration-300 ease-in-out rounded-lg">
+     <div class="w-[93%] md:w-1/5 h-full bg-[#FB8500] py-3 shadow-[0px_0px_30px_9px_rgba(234,88,12,0.4)] hover:shadow-[0px_0px_40px_12px_rgba(234,88,12,0.6)] transition-shadow duration-300 ease-in-out rounded-lg">
       <img class="w-[65%] mx-auto rounded-lg mt-5 transform transition-transform duration-300 ease-in-out hover:scale-105" src="linkedin.jpg" alt="">
       <div class="h-[1px] bg-gray-100 mt-4"></div>
       <div class="italic mx-auto text-center text-[#023047] mt-4 font-semibold text-lg">Garvit Singla</div>
