--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                    <h2 class="text-3xl font-semibold font-['Ubuntu']">Get in Touch</h2>
                    <p class="text-lg font-medium text-[#023047]">Click the button to email me!</p>
                    <p>garvitsingla4751@gmail.com</p>
-                   <a href="mailto:garitsingla4751@gmail.com" class="inline-block bg-[#023047] text-white font-bold px-6 py-3 mt-6 rounded-lg transition duration-300 ease-in-out hover:bg-[#046280]">
+                   <a href="mailto:garvitsingla4751@gmail.com" class="inline-block bg-[#023047] text-white font-bold px-6 py-3 mt-6 rounded-lg transition duration-300 ease-in-out hover:bg-[#046280]">
                      Email Me
                    </a>
                  </div>
